# serverman-repository

./: repository.json
services/: template.hsfiles
services/mongodb/: serverman-service-mongodb.cabal
services/mongodb/src/: Main.hs  Types.hs
services/mysql/: serverman-service-mysql.cabal
services/mysql/src/: Main.hs  Types.hs
services/nginx/: serverman-service-nginx.cabal
services/nginx/src/: Main  Main.hi  Main.hs  Types.hs
services/vsftpd/: serverman-service-vsftpd.cabal
services/vsftpd/src/: Main.hs  Types.hs
